--- a/templates/news.mustache
+++ b/templates/news.mustache
@@ -24,14 +24,14 @@
             <div>{{{displaymessage}}}</div>
         </div>
         <div class="link d-inline-block">
-            <a class="btn btn-primary" href="{{discussionlink}}">{{#str}}readfullpost, format_qmultopics{{/str}}</a>
+            <a class="btn btn-sm btn-primary" href="{{discussionlink}}">{{#str}}readfullpost, format_qmultopics{{/str}}</a>
         </div>
         <div class="info d-inline-block">
             <span class="name">{{fullname}}</span> |
             <span class="date">{{date}}</span>
         </div>
         {{#morenewslink}}
-            <a href="{{morenewslink}}" class="btn btn-primary morenews-btn float-md-right ml-0 ml-sm-auto mr-0">
+            <a href="{{morenewslink}}" class="btn btn-sm btn-primary morenews-btn float-md-right ml-0 ml-sm-auto mr-0">
                 {{#str}}morenews, format_qmultopics{{/str}}
             </a>
         {{/morenewslink}}
