Pivotal #151756757 - Added pinning functionality from within course

--- a/templates/news.mustache
+++ b/templates/news.mustache
@@ -20,7 +20,7 @@
 {{#discussions}}
     <div class="head clearfix">
         <div class="news-content">
-            <div><h5 class="text-primary"><b>{{subject}}</b></h5></div>
+            <div><h5 class="text-primary"><b>{{{subject}}}</b></h5></div>
             <div>{{{displaymessage}}}</div>
         </div>
         <div class="link d-inline-block">
