--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,10 @@
 .course-content ul.qmultopics li.section .left .section-handle img.icon { padding:0; vertical-align: baseline; }
 .course-content ul.qmultopics li.section .section_action_menu .textmenu,
 .course-content ul.qmultopics li.section .section_action_menu .menu-action-text { white-space: nowrap; }
+
+
+/* Tab Styles */
+.tablink {
+    cursor: pointer;
+}
+
