separated assessment info tabs again - wrapped old tab content into new tab

--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,10 @@
     cursor: pointer;
 }
 
+.assessment_info_block_content {
+    padding-top: 10px;
+}
+
+#content_assessmentinformation_area {
+    padding-top: 10px;
+}
