--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,33 @@
-.course-content ul.qmultopics {margin:0;}
-.course-content ul.qmultopics li.section {list-style: none;margin:0 0 5px 0;padding:0;}
-.course-content ul.qmultopics li.section .content {margin:0 40px;}
+.course-content ul.qmultopics {
+    margin:0;
+}
+.course-content ul.qmultopics li.section {
+    list-style: none;margin:0 0 5px 0;padding:0;
+}
+.course-content ul.qmultopics li.section .content {
+    margin:0 40px;
+}
 .course-content ul.qmultopics li.section .left,
-.course-content ul.qmultopics li.section .right {width:40px;padding: 0 6px;}
-.course-content ul.qmultopics li.section .right img.icon { padding: 0 0 4px 0;}
-.course-content ul.qmultopics li.section .left {padding-top:22px;text-align: right;}
+.course-content ul.qmultopics li.section .right {
+    width:40px;padding: 0 6px;
+}
+.course-content ul.qmultopics li.section .right img.icon {
+    padding: 0 0 4px 0;
+}
+.course-content ul.qmultopics li.section .left {
+    padding-top:22px;text-align: right;
+}
 .jsenabled .course-content ul.qmultopics li.section .left,
-.jsenabled .course-content ul.qmultopics li.section .right {width:auto;}
-.course-content ul.qmultopics li.section .left .section-handle img.icon { padding:0; vertical-align: baseline; }
+.jsenabled .course-content ul.qmultopics li.section .right {
+    width:auto;
+}
+.course-content ul.qmultopics li.section .left .section-handle img.icon {
+    padding:0; vertical-align: baseline;
+}
 .course-content ul.qmultopics li.section .section_action_menu .textmenu,
-.course-content ul.qmultopics li.section .section_action_menu .menu-action-text { white-space: nowrap; }
+.course-content ul.qmultopics li.section .section_action_menu .menu-action-text {
+    white-space: nowrap;
+}
 
 /* Tab Styles */
 .course-content ul.qmultopics .tablink {
