--- a/templates/news.mustache
+++ b/templates/news.mustache
@@ -15,6 +15,8 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
+    @template format_qmultopics/news
+
     Course module chooser.
 }}
 {{#discussions}}
