--- a/templates/news.mustache
+++ b/templates/news.mustache
@@ -23,9 +23,10 @@
     {
         "discussions": [{
             "subject": "test",
+            "displaymessage": "A test message",
             "discussionlink": "http://weltsensation.com",
-            "str": "Test String",
-            "fullname": "Full Name",
+            "str": "testid",
+            "fullname": "Matthias Opitz",
             "date": "17-11-1961",
             "morenewslink": "http://weltsensation.com/morenews",
         }]
